integration_poc/kubeconfs/node_pod_config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: v6-node

---
apiVersion: v1
kind: Namespace
metadata:
  name: v6-jobs

---
apiVersion: v1
kind: Pod
metadata:
 name: v6-node-pod
 namespace: v6-node
spec:
 hostname: v6-node-pod       # a better name yet to be defined
 subdomain: v6-pod-subdomain # => POD FQDN: v6-node-pod.v6-pod-subdomain.v6-node
 hostAliases:                
 - ip: "10.2.67.147"
   hostnames:
   - "v6-server.tail984a0.ts.net"
 containers:
 - name: v6-node-server
   image: docker.io/hcadavidescience/v6_k8s_node:latest
   tty: true
   command: ["python", "v6_k8s_node.py"]
   volumeMounts:
   - name: task-files-root
     mountPath: /app/tasks
   - name: kube-config-file
     mountPath: /app/.kube/config  
   - name: v6-node-config-file
     mountPath: /app/.v6node/configs/node_legacy_config.yaml
   - name: v6-node-default-database
     mountPath: /app/.databases/home/hcadavid/k8s/v6-on-kubernetes-PoC/csv/employees.csv

 volumes:
 - name: task-files-root
   hostPath:
     path: /tmp/tasks
 - name: kube-config-file
   hostPath:
     path: /home/hcadavid/.kube/config   
 - name: v6-node-config-file
   hostPath:
     path: /home/hcadavid/k8s/v6-on-kubernetes-PoC/integration_poc/configs/node_legacy_config.yaml
 - name: v6-node-default-database
   hostPath:
     path: /home/hcadavid/k8s/v6-on-kubernetes-PoC/csv/employees.csv
