integration_poc/kubeconfs/network_policies.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: v6-node

---
apiVersion: v1
kind: Namespace
metadata:
  name: v6-jobs

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: v6-jobs-allow-egress-to-proxy-only
  namespace: v6-jobs
spec:
  podSelector: {} # This selects all pods in the v6-jobs namespace
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: dummy-v6-proxy # This targets the dummy-v6-proxy pod
    ports:
    - protocol: TCP
      port:  8080 # Assuming the dummy-v6-proxy pod listens on port  8080
  - to:
    - namespaceSelector: {} # allow only the use DNS within the cluster
    ports:
    - protocol: UDP #This enables internal DNS resolution (otherwhise the static IP addresses of the proxy should be given)
      port: 53

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: v6-proxy-allow-internet-egress
  namespace: v6-jobs
spec:
  podSelector:
    matchLabels:
      app: dummy-v6-proxy
  policyTypes:
  - Egress
  egress:
  - {} # This rule allows egress traffic to any destination (could be restricted to the V6-server only)
