integration_poc/kubeconfs/node_pod_network_policies.yaml
#https://kubernetes.io/docs/tasks/administer-cluster/dns-debugging-resolution/

apiVersion: v1
kind: Namespace
metadata:
  name: v6-node

---
apiVersion: v1
kind: Namespace
metadata:
  name: v6-jobs

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: v6-alg-runner-policy
  namespace: v6-jobs
spec:
  podSelector:
    matchLabels:
      role: v6_alg_runner
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: v6-node-server-proxy
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: v6-node-server-proxy
    ports:
    - protocol: TCP
      port:  4567 
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---

# Policies for the node POD 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: v6-node-policy
  namespace: v6-jobs
spec:
  podSelector:
    matchLabels:
      role: v6-node
  policyTypes:
  - Egress
  egress:
  - {}
